Fixing rtm++ bug 54892. The .offsetParent property on the BODY element was incorreclty returning its real parent in stead of null. sr=vidur, r=pierre